--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                         <a href="https://startbootstrap.com/theme/resume" rel="noopener noreferrer" target="_blank">Design by Start Bootstrap</a>
                     </div>
                     <div class="subheading mb-5"></div>
-                    <p class="lead mb-5">Software Developer. Co-Founder at Frost Education*.</br>
+                    <p class="lead mb-5">I am a Software Developer and a Co-Founder at Frost Education*.</br>
                     </br>
                     Brex - Former Data Scientist (Marketing Analyst)</br>
-                    App Academy - Graduate in Software Engineering (Full Stack).</br>
-                    Harvard - Graduate in History (cum laude).</br>
+                    App Academy - Graduate in Software Engineering (Full Stack)</br>
+                    Harvard - Graduate in History (cum laude)</br>
                     </br>
                     Current Project: TabTomb, a browser extension that displays how long a tab has been open in the title of each tab.</p>
                     <div class="social-icons">
